# skills

./: .tool-versions  Makefile  README.md
.claude-plugin/: marketplace.json
plugins/agency/: README.md
plugins/agency-knows/: README.md
plugins/agency-knows/.claude-plugin/: plugin.json
plugins/agency-knows/skills/agency-knows/: SKILL.md
plugins/agency-knows/skills/agency-knows/scripts/: .env.example  .gitignore
plugins/agency-knows/skills/agency-knows/scripts/src/agency_knows/: __init__.py  api_client.py  cli.py  config.py  export.py  init.py
plugins/agency-knows/skills/kb-github/: SKILL.md
plugins/agency-knows/skills/kb-github/scripts/: install.sh  pyproject.toml  run.sh
plugins/agency-knows/skills/kb-github/scripts/src/agency_knows/: analyze.py  cli.py  config.py  generate.py  repo_scanner.py  schemas.py
plugins/agency/.claude-plugin/: plugin.json
plugins/agency/skills/kb-github/: SKILL.md
plugins/agency/skills/kb-github/scripts/: install.sh  pyproject.toml  run.sh
plugins/agency/skills/kb-github/scripts/src/agency_kb/: analyze.py  api_client.py  async_typer.py  cli.py  config.py  export.py  generate.py  init.py  repo_scanner.py  review.py  schemas.py
